<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:screenOrientation="landscape" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/Background"
        app:layout_constraintWidth_percent="3"
        app:layout_constraintHeight_percent="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:rotation="45"
        app:srcCompat="@drawable/background" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.6"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/loadGameButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHeight_percent="0.101"
        android:layout_marginTop="-5dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/LoadGameString"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/golden_white"
        android:fontFamily="@font/catchy_mager"
        android:shadowColor="@color/gold"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHeight_percent="0.101"
        android:layout_marginTop="-5dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/NewGameString"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/golden_white"
        android:fontFamily="@font/catchy_mager"
        android:shadowColor="@color/gold"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        app:layout_constraintTop_toBottomOf="@id/loadGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/tutorialButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="0.101"
        android:layout_marginTop="-5dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/TutorialString"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/golden_white"
        android:fontFamily="@font/catchy_mager"
        android:shadowColor="@color/gold"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        app:layout_constraintTop_toBottomOf="@id/newGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/creditsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.225"
        app:layout_constraintHeight_percent="0.101"
        android:layout_marginTop="-5dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/CreditsString"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/golden_white"
        android:fontFamily="@font/catchy_mager"
        android:shadowColor="@color/gold"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        app:layout_constraintTop_toBottomOf="@id/tutorialButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/inspirationText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.05"
        android:backgroundTint="#00000000"
        android:text="@string/InspirationString"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/golden_white"
        android:fontFamily="@font/catchy_mager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <TextView
        android:id="@+id/appVerText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.1"
        android:backgroundTint="#00000000"
        android:text="@string/AppVerString"
        android:textAlignment="textEnd"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="@color/golden_white"
        android:fontFamily="@font/catchy_mager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1" />

    <View
        android:id="@+id/creditsBackground"
        android:visibility="gone"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:background="@drawable/credits"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/creditsBackButton"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#00000000"
        app:layout_constraintWidth_percent="0.66"
        app:layout_constraintHeight_percent="0.084"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintTop_toTopOf="@id/creditsBackground"
        app:layout_constraintBottom_toBottomOf="@id/creditsBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/tutorialBackground"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/tutorial"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
